# snn_engine

./: .gitignore  .gitmodules  requirements.txt
docs-src/writeup/: Learning.pptx  sleep.drawio  test.aux  test.dvi  test.tex.bak  untitled.blend1
docs/doctrees/: environment.pickle  index.doctree
docs/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs_src/source/: index.rst
docs_src/writeup/: test.blg  untitled.blend
inc/cuda/: helper_cuda.h
src/: engine.py
src/app/: __init__.py  base_app.py  engine_scene_canvas.py  gui.py  gui_element.py  neuron_properties_collapsible.py  plot_widgets.py  rendered_object_collapsible.py  ui_panels.py  window.py  windows.py
src/gpu/: __init__.py  gpu_arrays.py
src/gpu/libs/snn_engine_gpu/: CMakeLists.txt  README.md  build.bat  make.bat  test.py
src/gpu/libs/snn_engine_gpu/src/: bindings.cu  snn_construction.cu  snn_construction.cuh
src/gpu/libs/snn_engine_gpu/src/example/: snn_engine_gpu.cu  snn_engine_gpu.cuh
src/gpu/libs/snn_engine_gpu/src/utils/: cpp_header.h  launch_parameters.cuh
src/gui/: __init__.py  engine_scene_canvas.py  scene.py  ui_element.py  window.py
src/interfaces/: __init__.py  neuron.py  signaling.py
src/network/: __init__.py  boxes.py  gpu_array.py  group_mesh_visual.py  network_array_shapes.py  network_config.py  network_gpu_arrays.py  network_grid.py  network_states.py  network_structures.py  neurons.py  plots.py  rendered_objects.py  spiking_neural_network.py  utils.py
src/rendered_object/: rendered_object.py
src/rendering/: __init__.py  cuda_box.py  (+4 more)
(+49 files in other folders)
